--- a/Client/src/styles/fonts/typography.css
+++ b/Client/src/styles/fonts/typography.css
@@ -177,6 +177,15 @@
   font-display: swap;
   font-style: normal;
 }
+@font-face {
+  font-family: 'IBMPlexSans-Regular';
+  src: url('IBMPlexSans-Regular.ttf') format('woff2'),
+       url('Chillax-Medium.woff') format('woff'),
+       url('Chillax-Medium.ttf') format('truetype');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
 /**
 * This is a variable font
 * You can control variable axes as shown below:
@@ -194,4 +203,5 @@
   font-display: swap;
   font-style: normal;
 }
+
 
